AX: aria-rowspan value should be ignored if td/th rowspan value is provided https://bugs.webkit.org/show_bug.cgi?id=171214

Reviewed by Chris Fleizach.

Source/WebCore:

Return -1 in AccessibilityTableCell::ariaColumnSpan() and ariaRowSpan() if the
cell element has an explicit value for the native host language's span attribute.
Add checks to AccessibilityTableCell::columnIndexRange() and rowIndexRange() so
that we prefer an author-provided ARIA span value over an implicit host-language
span value. Similarly, add checks to AccessibilityARIAGridCell::columnIndexRange()
and rowIndexRange() so that we fall back on implicit host-language span values
when there is no author-provided ARIA span value and the ARIA cell is associated
with a cell element.

Test: accessibility/aria-cellspans-with-native-cellspans.html

* accessibility/AccessibilityARIAGridCell.cpp:
(WebCore::AccessibilityARIAGridCell::ariaRowSpanWithRowIndex):
(WebCore::AccessibilityARIAGridCell::columnIndexRange):
* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::rowIndexRange):
(WebCore::AccessibilityTableCell::columnIndexRange):
(WebCore::AccessibilityTableCell::ariaColumnSpan):
(WebCore::AccessibilityTableCell::ariaRowSpan):

LayoutTests:

* accessibility/aria-cellspans-with-native-cellspans-expected.txt: Added.
* accessibility/aria-cellspans-with-native-cellspans.html: Added.


Canonical link: https://commits.webkit.org/188550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216167 268f45cc-cd09-0410-ab3c-d52691b4dbfc