Source/WebCore/accessibility/AccessibilityARIAGridCell.cpp
@@ -99,8 +99,11 @@ void AccessibilityARIAGridCell::rowIndexRange(std::pair<unsigned, unsigned>& row
 unsigned AccessibilityARIAGridCell::ariaRowSpanWithRowIndex(unsigned rowIndex) const
 {
     int rowSpan = AccessibilityTableCell::ariaRowSpan();
-    if (rowSpan == -1)
-        return 1;
+    if (rowSpan == -1) {
+        std::pair<unsigned, unsigned> range;
+        AccessibilityTableCell::rowIndexRange(range);
+        return std::max(static_cast<int>(range.second), 1);
+    }
 
     AccessibilityObject* parent = parentObjectUnignored();
     if (!parent)
@@ -155,7 +158,14 @@ void AccessibilityARIAGridCell::columnIndexRange(std::pair<unsigned, unsigned>& 
     
     // ARIA 1.1, aria-colspan attribute is intended for cells and gridcells which are not contained in a native table.
     // So we should check for that attribute here.
-    columnRange.second = std::max(ariaColumnSpan(), 1);
+    int columnSpan = AccessibilityTableCell::ariaColumnSpan();
+    if (columnSpan == -1) {
+        std::pair<unsigned, unsigned> range;
+        AccessibilityTableCell::columnIndexRange(range);
+        columnSpan = range.second;
+    }
+
+    columnRange.second = std::max(columnSpan, 1);
 }
 
 AccessibilityObject* AccessibilityARIAGridCell::parentRowGroup() const
